# gnirehtet

./: .gitignore  DEVELOP.md  Makefile  README.md  build.bat  build.gradle  gradle.properties  settings.gradle
.github/workflows/: ci.yml  release.yml
.reasonix/: desktop-topic-created-at.json  desktop-topic-title-sources.json  desktop-topic-titles.json
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/genymobile/gnirehtet/: Forwarder.java  GnirehtetActivity.java  GnirehtetService.java  IPPacketOutputStream.java  Notifier.java  VpnConfiguration.java
relay-rust/: Cargo.toml
relay-rust/src/: adb.rs  adb_monitor.rs  cli.rs  commands.rs  execution_error.rs  lib.rs  logger.rs  main.rs
relay-rust/src/relay/: binary.rs  client.rs  connection.rs  datagram.rs  datagram_buffer.rs  dns_cache.rs  interrupt.rs  ip_header.rs  ip_packet.rs  ip_packet_buffer.rs  ipv4_header.rs  ipv4_packet.rs  ipv4_packet_buffer.rs  ipv6_header.rs  mod.rs  net.rs  packet_source.rs  packetizer.rs  relay.rs  router.rs  stream_buffer.rs  tcp_connection.rs  tcp_header.rs  transport_header.rs  udp_connection.rs  udp_header.rs
scripts/: build-apk.sh  build.sh  release.sh
