[package]
name = "gnirehtet"
version = "2.6.0"
authors = ["Romain Vimont <rom@rom1v.com>"]
edition = "2024"
description = "Reverse tethering for Android — share your computer's internet with an Android device via USB/ADB"
license = "Apache-2.0"
repository = "https://github.com/Genymobile/gnirehtet"
keywords = ["adb", "reverse-tethering", "android", "vpn", "tethering"]
categories = ["network", "command-line-utilities"]

[lib]
name = "relaylib"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
log = "0.4"
jiff = "0.2"
byteorder = "1.5"
rand = "0.9"
clap = { version = "4", features = ["derive"] }
socket2 = "0.5"
libc = "0.2"

[profile.release]
lto = true
